# sjavs-backend

./: .gitignore  Cargo.toml  PRODUCTION_READINESS_CHECKLIST.md  README.md
.cursor/rules/: sjavs-game-rules.mdc  sjavs-implementation-system-overview.mdc  trump-selection-validation.mdc
.cursor/rules/implementation-steps-for-sync-on-load/: 00-current-state-analysis.mdc  01-foundation-setup.mdc  02-simple-phases.mdc  03-bidding-phase.mdc  04-playing-phase.mdc  05-completed-phase.mdc  06-performance-testing.mdc  sync-on-load-implementation-summary.mdc
.cursor/rules/implementation-steps-for-trick-phase/: step-01-current-state-analysis.mdc  step-02-trick-state-management.mdc  step-03-card-playing-endpoint.mdc  step-04-game-completion-and-sjavs-scoring.mdc  step-05-cross-rubber-management.mdc  trick-phase-implementation-summary.mdc
.cursor/rules/implementation-steps-trump-selection/: README.mdc  implementation-summary.mdc  step-01-enhance-game-state.mdc  step-02-card-deck-management.mdc  step-03-game-start-endpoint.mdc  step-04-bidding-endpoints.mdc  step-05-websocket-integration.mdc
src/: api.rs  auth.rs  auth_layer.rs  main.rs  redis.rs  state.rs  websocket.rs
src/api/: routes.rs  schemas.rs
src/api/handlers/: debug.rs  game_bidding.rs  game_playing.rs  game_scoring.rs  game_start.rs  match_handler.rs  mod.rs  normal_match.rs  normal_match_join.rs  normal_match_leave.rs  (+2 more)
src/game/: card.rs  cross.rs  deck.rs  hand.rs  mod.rs  scoring.rs  trick.rs
src/redis/: mod.rs
src/websocket/: events.rs  handler.rs  routes.rs  state_builder.rs  timestamp.rs  types.rs
(+19 files in other folders)
