[package]
name = "sjavs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19"
futures-util = "0.3"
dashmap = "5.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
