[package]
name = "sjavs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19"
futures-util = "0.3"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
jsonwebtoken = { version = "9.2", default-features = false, features = ["use_pem"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }
chrono = "0.4"
rand = "0.8"